рефакторинг Тестов